--- a/memory_game.html
+++ b/memory_game.html
@@ -11,16 +11,36 @@
     <link rel="stylesheet" type="text/css" href="./css/memory_game.css">
     <!-- Your page title-->
     <title>Memory Game</title>
-    
-</head>
-
-<body>
-    
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="./js/memory_game.js"></script>
+</head>
+
+<body>
+    <div id="container">
+        <div id="header">
+            <h1>Memory Game</h1>
+            <input type="button" value="new game"/>
+        </div>
+        <div id="player-live-score">Number of wrong guesses</div>
+        <ul id="deck">
+            <li><img src="./media/pablo_escobar_back_card.png"></li>
+            <li><img src="./media/pablo_escobar_back_card.png"></li>
+            <li><img src="./media/pablo_escobar_back_card.png"></li>
+            <li><img src="./media/pablo_escobar_back_card.png"></li>
+            <li><img src="./media/pablo_escobar_back_card.png"></li>
+            <li><img src="./media/pablo_escobar_back_card.png"></li>
+            <li><img src="./media/pablo_escobar_back_card.png"></li>
+            <li><img src="./media/pablo_escobar_back_card.png"></li>
+            <li><img src="./media/pablo_escobar_back_card.png"></li>
+            <li><img src="./media/pablo_escobar_back_card.png"></li>
+            <li><img src="./media/pablo_escobar_back_card.png"></li>
+            <li><img src="./media/pablo_escobar_back_card.png"></li>
+        </ul>
+        <div id="modal-container">
+            <div id="modal">You won</div>
+        </div>
+    </div>
 </body>
 
 </html>
