added logic to the cards. added match function to check if two cards are the same

--- a/memory_game.html
+++ b/memory_game.html
@@ -5,14 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="./css/memory_game.css">
     <!-- Your page title-->
     <title>Memory Game</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="./js/memory_game.js"></script>
 </head>
 
@@ -24,7 +21,7 @@
         </div>
         <div id="player-live-score">Number of wrong guesses</div>
         <ul id="deck">
-            
+
         </ul>
         <div id="modal-container">
             <div id="modal">You won</div>
