added difficulty levels

--- a/memory_game.html
+++ b/memory_game.html
@@ -31,14 +31,18 @@
     </div>
     <div id="welcome-screen">
         <div class="customize-screen" id="start">
+            <h1>Memory Game</h1>
             <input id="play-game-button" class="play-button" type="button" value="play game">
         </div>
         <div class="customize-screen" id="difficulty">
-            <input class="play-button" type="button" value="easy">
-            <input class="play-button" type="button" value="medium">
-            <input class="play-button" type="button" value="hard">
+            <input class="play-button difficulty-buttons" type="button" value="easy">
+            <input class="play-button difficulty-buttons" type="button" value="medium">
+            <input class="play-button difficulty-buttons" type="button" value="hard">
         </div>
-        <div class="customize-screen" id="theme"></div>
+        <div class="customize-screen" id="theme">
+            <input class="play-button themes-buttons" type="button" value="narcos">
+            <input class="play-button themes-buttons" type="button" value="some other theme">
+        </div>
     </div>
 </body>
 
