--- a/memory_game.html
+++ b/memory_game.html
@@ -40,8 +40,8 @@
             <input class="play-button difficulty-buttons" type="button" value="hard">
         </div>
         <div class="customize-screen" id="theme">
-            <input class="play-button themes-buttons" type="button" value="narcos">
-            <input class="play-button themes-buttons" type="button" value="some other theme">
+            <input id="narcos" class="play-button themes-buttons" type="button" value="Narcos">
+            <input id="la-casa-de-papel" class="play-button themes-buttons" type="button" value="La Casa de Papel">
         </div>
     </div>
 </body>
