--- a/memory_game.html
+++ b/memory_game.html
@@ -19,7 +19,7 @@
         <div id="header">
             <h1>Memory Game</h1>
         </div>
-        <div id="player-live-score">Wrong Guesses:</div>
+        <div id="player-live-score">Wrong Guesses: 0</div>
         <ul id="deck"></ul>
         <div id="modal-container">
             <div id="modal">
