added high score table

--- a/memory_game.html
+++ b/memory_game.html
@@ -25,6 +25,18 @@
             <div id="modal">
                 <span>Game Over</span>
                 <span id="player-final-score"></span>
+                <table id="table-score">
+                    <thead>
+                        <tr>
+                            <th>Difficulty</th>
+                            <th>Player's Name</th>
+                            <th>Wrong Guesses</th>
+                        </tr>
+                    </thead>
+                    <tbody id="players-record">
+
+                    </tbody>
+                </table>
                 <input id="try-again-button" class="play-button" type="button" value="Try Again"/>
             </div>
         </div>
